--- a/package.json
+++ b/package.json
@@ -20,5 +20,8 @@
   "bugs": {
     "url": "https://github.com/voytus/node-npm/issues"
   },
-  "homepage": "https://github.com/voytus/node-npm#readme"
+  "homepage": "https://github.com/voytus/node-npm#readme",
+  "dependencies": {
+    "morgan": "^1.10.0"
+  }
 }
